{
    "name": "PlayerAction",
    "maps": [
        {
            "name": "Player",
            "id": "2c50bec5-54ed-4af3-8366-4aa048ed602d",
            "actions": [
                {
                    "name": "Mouvement",
                    "type": "PassThrough",
                    "id": "368933b1-1fde-43ae-bf1a-8a2de254f13a",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "84c0f919-a0a8-49af-897f-594d15dbbe3a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PetitPoing",
                    "type": "Button",
                    "id": "aeb61a21-e428-4300-83c7-571e899379e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "PetitPied",
                    "type": "Button",
                    "id": "2b892153-9f6b-40ba-869d-b5121e6fe6e8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GrosPoing",
                    "type": "Button",
                    "id": "860d9980-99a6-4cde-943f-fff806179f27",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "GrosPied",
                    "type": "Button",
                    "id": "f8638db5-2d9b-477b-a30d-680c75b928ce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Ultime",
                    "type": "Button",
                    "id": "dea97485-d938-488f-b0e7-e1469065412a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Garde",
                    "type": "Button",
                    "id": "397bbc2d-ceb2-4213-9964-95dc65fcb524",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "QD",
                    "id": "ac07390f-374d-46d9-b7d1-3e581c8f1f07",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouvement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "left",
                    "id": "91120ca0-0a79-4be6-9e41-01135a9026b0",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Clavier",
                    "action": "Mouvement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "77d9a8a6-9b18-4a02-8759-885e21cc7d76",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Clavier",
                    "action": "Mouvement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9490580f-e85e-4812-baf4-01c1d37d76aa",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "Manette",
                    "action": "Mouvement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "de62078c-cf7f-4ad1-ac94-3b611e681a77",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Clavier",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "92c70b45-ca84-4488-9c7a-8fa73f7ee85b",
                    "path": "<Gamepad>/leftStick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "Manette",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a2e33ced-c499-4e2d-87d8-2428238b0d59",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "Clavier",
                    "action": "PetitPoing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a79fab0e-3346-47f4-8083-9134c8e07f6f",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Manette",
                    "action": "PetitPoing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9dbfa676-3a74-4b2e-a8d3-c74fa61261e1",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "Clavier",
                    "action": "PetitPied",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cf04b5dd-fb07-4094-83d8-035bb981c113",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "Manette",
                    "action": "PetitPied",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8434ff97-704e-46d4-9910-72f84aa255fe",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GrosPoing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "77e94d7f-c5f9-4994-890f-8f14bc0abd41",
                    "path": "<Gamepad>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "Manette",
                    "action": "GrosPoing",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da8d3fc5-668a-4faf-bcef-bdface62a950",
                    "path": "<Keyboard>/o",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "GrosPied",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f4f642ee-9a2d-469f-8ef6-011735404b97",
                    "path": "<Gamepad>/buttonNorth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Manette",
                    "action": "GrosPied",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5195e39b-b38e-444b-afdc-02a4262cad3b",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "Clavier",
                    "action": "Ultime",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Two Triggers",
                    "id": "fbde0ece-0fed-4b92-bd34-b64b27dda170",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ultime",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "44a7d709-7196-4cb9-a56b-45194d75811c",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ultime",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Binding",
                    "id": "0d6f0dd5-57f6-442b-863c-9faed905dcba",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Ultime",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "81ca2253-7f5b-4c65-9e7e-4704ef9ef897",
                    "path": "<Keyboard>/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "Clavier",
                    "action": "Garde",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b13a8fa1-2a7f-4896-bde9-53b5c43f9f47",
                    "path": "<Gamepad>/rightShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Garde",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "87eee95e-91b7-4ee9-9491-683791402332",
                    "path": "<Gamepad>/leftShoulder",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Garde",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "20e5b6db-511c-49b1-a7d5-3f12f0c61c6a",
            "actions": [
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "a55911ff-fc91-42ce-8033-8376dabb637f",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2c3f1122-1c04-4ac7-aa31-5f82e2bbc938",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Clavier",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0badac9c-c882-4298-ad09-8be6ec83eb35",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Manette",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Clavier",
            "bindingGroup": "Clavier",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Manette",
            "bindingGroup": "Manette",
            "devices": [
                {
                    "devicePath": "<Gamepad>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}